[tool.poetry]
name = "cs490u-fe"
version = "0.1.0"
description = ""
authors = ["DripCharacter <wsms8646@gmail.com>"]
readme = "README.md"
packages = [{include = "cs490u_fe"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
